[package]
name = "grdb"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bincode = "1.3.3"
rocksdb = "0.19.0"
serde = { version = "1.0.147", features = ["derive"] }

[dev-dependencies]
uuid = { version = "1.2.2", features = ["v4"] }
